--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "dependencies": {
     "@babel/runtime": "^7.12.13",
-    "core-js": "^3.8.3"
+    "core-js": "^3.8.3",
+    "uniq": "^1.0.1"
   },
   "scripts": {
     "babel": "babel"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.12.15"
+    "@babel/plugin-transform-runtime": "^7.12.15",
+    "babel-plugin-add-module-exports": "^1.0.4"
   }
 }
